# WEB_HW-12

Home_work_12/phonebook/: main.py  pyproject.toml
Home_work_12/phonebook/src/: schemas.py
Home_work_12/phonebook/src/database/: models.py
Home_work_12/phonebook/src/repository/: users.py
Home_work_12/phonebook/src/routes/: auth.py  contacts.py
Home_work_12/phonebook/src/services/: auth.py
